--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
         </section>
 
-        <!-- Фото команды -->
+        <!-- Команда -->
         <section class="main-section-team">
             <div class="container">
                 <h2>Наша команда</h2>
@@ -257,24 +257,111 @@
                 </ul>
             </div>
         </section>
+
+        <!-- Постоянные клиенты -->
+        <section class="main-section-clients">
+            <div class="container">
+                <h2>Постоянные клиенты</h2>
+                <ul class="list">
+                    <li class="client-box item">
+                        <a class="client-link" href="#" aria-label="Client1">
+                            <svg class="icon" width="106" height="60">
+                                <use href="./images/icons-sprite.svg#icon-client-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-box item">
+                        <a class="client-link" href="#" aria-label="Client2">
+                            <svg class="icon" width="106" height="60">
+                                <use href="./images/icons-sprite.svg#icon-client-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-box item">
+                        <a class="client-link" href="#" aria-label="Client3">
+                            <svg class="icon" width="106" height="60">
+                                <use href="./images/icons-sprite.svg#icon-client-3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-box item">
+                        <a class="client-link" href="#" aria-label="Client4">
+                            <svg class="icon" width="106" height="60">
+                                <use href="./images/icons-sprite.svg#icon-client-4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-box item">
+                        <a class="client-link" href="#" aria-label="Client5">
+                            <svg class="icon" width="106" height="60">
+                                <use href="./images/icons-sprite.svg#icon-client-5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-box item">
+                        <a class="client-link" href="#" aria-label="Client6">
+                            <svg class="icon" width="106" height="60">
+                                <use href="./images/icons-sprite.svg#icon-client-6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <!-- Подвал страницы -->
     <footer class="footer">
-        <div class="container">
-            <a href="./index.html" class="logo-web">Web<span class="logo-studio-footer">Studio</span></a>
-
-            <!-- Контакты -->
-            <div class="contact-list-footer">
-                <ul class="list">
-                    <li><address class="address">г. Киев, пр-т Леси Украинки, 26</address></li>
-                    <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-                </ul>
+            <div class="container">
+                <!-- Контакты -->
+                <div class="contacts-footer">
+                    <a href="./index.html" class="logo-web">Web<span class="logo-studio-footer">Studio</span></a>
+                    
+                    <div class="contact-list-footer">
+                        <ul class="list">
+                            <li><address class="address">г. Киев, пр-т Леси Украинки, 26</address></li>
+                            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Социальные сети -->
+                <div class="social-media-footer">
+                    <h2>Присоединяйтесь</h2>
+                    <ul class="icons-list-footer list"> 
+                        <li class="item">
+                            <a class="socialmedia-footer" href="https://www.instagram.com/" aria-label="Instagram">
+                                <svg class="icon" width="20" height="20">
+                                    <use href="./images/icons-sprite.svg#icon-instagram-grey"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="item">
+                            <a class="socialmedia-footer" href="https://twitter.com/" aria-label="Twitter">
+                                <svg class="icon" width="20" height="20">
+                                    <use href="./images/icons-sprite.svg#icon-twitter-grey"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="item">
+                            <a class="socialmedia-footer" href="https://www.facebook.com/" aria-label="Facebook">
+                                <svg class="icon" width="20" height="20">
+                                    <use href="./images/icons-sprite.svg#icon-facebook-grey"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="item">
+                            <a class="socialmedia-footer" href="https://www.linkedin.com/" aria-label="Linkedin">
+                                <svg class="icon" width="20" height="20">
+                                    <use href="./images/icons-sprite.svg#icon-linkedin-grey"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
     </footer>
 </body>
 </html>
-
+    
 
